--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -5,7 +5,11 @@
   position: fixed;
   top: 0;
   z-index: 999;
-  background: linear-gradient(to top, transparent 0%, rgb(0, 0, 0, 0.3) 50%);
+  background: linear-gradient(
+    to top,
+    transparent 0%,
+    rgba(94, 22, 22, 0.3) 50%
+  );
 
   &.scrolled {
     background-color: var(--main-color);
@@ -27,9 +31,11 @@
         margin-right: 40px;
       }
 
-      span {
+      span .test {
+        text-decoration: none;
         margin-right: 20px;
         cursor: pointer;
+        color: white;
       }
     }
 
